Fix image overflow

--- a/new-site/modules/biography-card/_style.scss
+++ b/new-site/modules/biography-card/_style.scss
@@ -12,10 +12,11 @@ biography-card {
 	picture {
 		width: 100%;
 		max-width: 300px;		
+		border-radius: 15px;
 	}
 
-	picture, img {
-		border-radius: 15px;
+	img {
+		overflow: hidden;
 	}
 
 	.bio-attributes {
